--- a/.htaccess
+++ b/.htaccess
@@ -13,4 +13,7 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 
+    RewriteEngine On 
+    RewriteCond %{HTTP:Authorization} ^(.+)$ 
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 </IfModule>
