--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "realrashid/sweet-alert": "^5.1",
         "twilio/sdk": "^6.37",
+        "uxweb/sweet-alert": "^2.0",
         "vonage/client": "^3.0",
         "yajra/laravel-datatables-oracle": "^9.21"
     },
